<resources>
    <string name="app_name">ShoppingPlus</string>
    <string name="email">Email</string>
    <string name="password">Geslo</string>
    <string name="repeat_password">Potrdi geslo</string>
    <string name="create_account">Naredi račun</string>
    <string name="login">Prijava</string>
    <string name="welcome">Dobrodošli</string>
    <string name="registrationFailed">Registracija neuspešna! Prosim, poskusite ponovno.</string>
    <string name="registrationSuccess">Registracija uspešna!</string>
    <string name="registering">Registriram uporabnika...</string>
    <string name="passwordRequired">Geslo je obvezno!</string>
    <string name="emailRequired">Email je obvezen!</string>
    <string name="stevilkaKarticeRequired">Številka kartice je obvezna!</string>
    <string name="imeTrgovineRequired">Ime trgovine je obvezno!</string>
    <string name="emailInvalid">Neveljaven email!</string>
    <string name="passwordInvalid">Geslo mora imeti 6 znakov!</string>
    <string name="userExists">Uporabnik s tem emailom že obstaja!</string>
    <string name="loggingIn">Prijavljam uporabnika...</string>
    <string name="addingCard">Dodajam kartico...</string>
    <string name="loginSuccess">Prijava uspešna!</string>
    <string name="chooseSource">Izberite vir</string>
    <string name="chooseFailed">Izbor spodletel! Prosim, poskusite ponovno.</string>
    <string name="kamera">Kamera</string>
    <string name="staticNotFound">Statičnih trgovin ni bilo mogoče naložiti. Prosim, poskusite ponovno.</string>
    <string name="staticPhotoLoadFailure">Nalaganje slike kartice neuspešno! Prosim, poskusite ponovno.</string>
    <string name="galerija">Galerija</string>
    <string name="staticStores">Izbira iz obstoječega nabora (opcijsko)</string>
    <string name="click">(klik na sliko za urejanje)</string>
    <string name="preklici">Prekliči</string>
    <string name="loginFailed">Prijava neuspešna! Prosim, poskusite ponovno.</string>
    <string name="photoUploadSuccess">Nalaganje slike kartice uspešno!</string>
    <string name="photoUploadFailure">Nalaganje slike kartice spodletelo! Prosim, poskusite ponovno.</string>
    <string name="didntGetURL">Povezave do slike ni bilo moč pridobiti! Prosim, poskusite ponovno.</string>
    <string name="logout">Odjava</string>
    <string name="editProfile">Uredi profil</string>
    <string name="emailVerified">Email potrjen.</string>
    <string name="emailNotVerified">Email ni potrjen! (Klik)</string>
    <string name="verEmailSent">Na email boste prejeli potrditveno povezavo.</string>
    <string name="alreadyHere">Se že nahajate v izbranem meniju!</string>
    <string name="forgotPassword">Pozabljeno geslo</string>
    <string name="forgotDetails">Vnesite email, vezan na pozabljen račun, in posredovali vam bomo navodila za ponastavitev gesla.</string>
    <string name="sendEmailForgot">Pošlji email</string>
    <string name="sendingEmail">Pošiljam email...</string>
    <string name="emailSuccess">Email poslan!</string>
    <string name="userDoesntExist">Uporabnik s tem emailom ne obstaja!</string>
    <string name="emailFailed">Emaila ni bilo možno poslati!</string>
    <string name="deleteAccount">Izbriši račun</string>
    <string name="youSure">Ste prepričani?</string>
    <string name="deleteMessage">Brisanje računa bo popolnoma odstranilo račun iz sistema in vam onemogočilo ponovni vstop v aplikacijo.</string>
    <string name="yes">Da</string>
    <string name="no">Ne</string>
    <string name="delete">Izbriši</string>
    <string name="cancel">Prekliči</string>
    <string name="change">Spremeni</string>
    <string name="deleteSuccess">Račun izbrisan!</string>
    <string name="deleteFailed">Računa ni bilo mogoče izbrisati!</string>
    <string name="deletingAccount">Brisanje računa...</string>
    <string name="emailStatus">Status emaila: </string>
    <string name="changeEmail">Spremeni email</string>
    <string name="changePassword">Spremeni geslo</string>
    <string name="email_podpicje">Email:</string>
    <string name="changeEmailSuccess">Email uspešno spremenjen.</string>
    <string name="changeEmailFailed">Email ni spremenjen.</string>
    <string name="ok">OK</string>
    <string name="newPassword">Novo geslo</string>
    <string name="newPasswordRepeat">Ponovitev novega gesla</string>
    <string name="oldPassword">Staro geslo</string>
    <string name="emailIsSame">Email je enak!</string>
    <string name="changingEmail">Spreminjam email...</string>
    <string name="passwordMissmatch">Gesli se ne ujemata!</string>
    <string name="changingPassword">Spreminjam geslo...</string>
    <string name="changePasswordSuccess">Geslo uspešno spremenjeno.</string>
    <string name="changePasswordFailed">Geslo ni spremenjeno.</string>
    <string name="loginRequired">Zahtevana je ponovna prijava!</string>
    <string name="repeatPassword">Ponovitev gesla</string>
    <string name="googleSignInError">Napaka pri prijavi z Google.</string>
    <string name="googleAuthError">Napaka pri avtentikaciji.</string>
    <string name="disabledAccountType">Onemogočeno zaradi tipa računa.</string>
    <string name="facebook_app_id">378105732937439</string>
    <string name="fb_login_protocol_scheme">fb378105732937439</string>
    <string name="loginCancelled">Prijava prekinjena.</string>
    <string name="betaWarning">Opozorilo BETA</string>
    <string name="betaDetails">Funkcija je v stanju beta! Obstajajo znane napake, ki se bodo odpravile v prihodnjih različicah.</string>
    <string name="noCameraPermission">Aplikacija nima dovoljenja za uporabo kamere!</string>
    <string name="noLocationPermission">Aplikacija nima dovoljenja za uporabo lokacije!</string>
    <string name="noStoragePermission">Aplikacija nima dovoljenja za uporabo shrambe!</string>
    <string name="noBarcodeScanned">Ni najdene številke kartice!</string>
    <string name="storagePermissionGranted">Dovoljenje za shrambo pridobljeno!</string>
    <string name="cameraPermissionGranted">Dovoljenje za kamero pridobljeno!</string>
    <string name="locationPermissionGranted">Dovoljenje za lokacijo pridobljeno!</string>
    <string name="manualEntry">Vnesi ročno</string>
    <string name="addCard">Dodaj kartico</string>
    <string name="stevilkaKartice">Številka kartice</string>
    <string name="imeTrgovine">Ime trgovine</string>
    <string name="cardAdded">Kartica uspešno shranjena!</string>
    <string name="cardNotAdded">Napaka pri shranjevanju kartice!</string>
    <string name="validityCheck">Potrditev veljavnosti</string>
    <string name="validityDetails">Ali so vnešeni podatki pravilni?</string>
    <!--PETRA DODALA***********:-->
    <string name="databaseTitleCard">Naslov</string>
    <string name="databaseSifraCard">Šifra</string>
    <string name="gumbSeznamArtiklov">Nakupovalni seznam</string>
    <string name="gumbZemljevid">Trgovine</string>
    <string name="kartice">Kartice</string>
    <string name="map_key" translatable="false">AIzaSyAzHUeTpH32LXxsaGDl6ZWfAdRmTcgBLWY</string>
    <string name="slika_kartice">Slika kartice</string>
    <!--**************************:-->
    <string name="seznamArtiklov">Seznam artiklov </string>
    <string name="dodajArtikel">Dopolni seznam:</string>
    <string name="gumbDodajArtikel">Dodaj nov artikel</string>
    <string name="dodajNoveArtikle">Dodaj nov artikel</string>
    <string name="gumbShraniArtikle">Shrani</string>
    <string name="nazivArtikla">Naziv: </string>
    <string name="kolicinaArtikla">Količina: </string>
    <string name="opisArtikla">Dodaten opis: </string>
    <string name="izdelekVKosarici">Ali je izdelek že v košarici: </string>
    <string name="podrobnostiArtikla">Podrobnosti artikla: </string>
    <string name="databaseNazivArtikla">Naziv: </string>
    <string name="databaseKolicinaArtikla">Količina:</string>
    <string name="databaseOpisArtikla">Dodaten opis: </string>
    <string name="databaseStatusArtikla">Ali je izdelek že v košarici: </string>
    <string name="sort">Sortiraj</string>
    <string name="razdaljaRequired">Razdalja je obvezna! (privzeto je 30km)</string>
    <string name="koli_ina_naziv_opis">Količina: Naziv: Opis:</string>
    <string name="opis">Opis:</string>
    <string name="naziv">Naziv:</string>
    <string name="koli_ina">Količina:</string>
    <string name="title_activity_maps">Map</string>
    <string name="niGooglePlayStoritev">Storitve Google Play niso na voljo!</string>
    <string name="osve_i">Osveži</string>
    <string name="razdalja_v_km">Razdalja (v km)</string>
    <string name="razdaljaNeSmeBitiNegativna">Razdalja ne sme biti negativna!</string>
    <string name="nepravilenFormatRazdalje">Nepravilen format razdalje!</string>
</resources>
