<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileActivity"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogoProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tvEmailProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/emailValue"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:inputType="textEmailAddress"
                android:textSize="20sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/btnChangeEmail"
                android:layout_gravity="center"
                android:text="@string/ok" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/emailStatus"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvVerified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvPassowrdProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/password"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passwordNewValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newPassword"
            android:inputType="textPassword"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/passwordNewValueRepeat"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:hint="@string/newPasswordRepeat"
                android:inputType="textPassword"
                android:textSize="20sp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/btnChangePassword"
                android:layout_gravity="center"
                android:text="@string/ok" />
        </LinearLayout>

        <Button
            android:id="@+id/btnDeleteAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/deleteAccount" />
    </LinearLayout>
</ScrollView>