<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etEmailLog"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="179dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etPasswordLog"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmailLog"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLoginLog"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPasswordLog"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tvCreateAccLog"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="354dp"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

</RelativeLayout>