<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ArtikliActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/dodajNoveArtikle"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/nazivArtikla1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nazivArtikla"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nazivArtikla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/kolicinaArtikla1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kolicinaArtikla"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/kolicinaArtikla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opisArtikla"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/opisArtikla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/izdelekVKosarici"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/kosaricaZArtiklom"
            android:layout_width="match_parent"
            android:layout_height="72dp">

            <RadioButton
                android:id="@+id/radioButtonDa"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Da" />

            <RadioButton
                android:id="@+id/radioButtonNe"
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Ne" />
        </RadioGroup>

        <Button
            android:id="@+id/btnShraniArtikel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gumbShraniArtikle" />

    </LinearLayout>
</ScrollView>