<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PodrobnostiArtiklaActivity"
        android:orientation="vertical">

        <!--LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/podrobnostiArtikla"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout-->

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/podrobnostiArtikla"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/nazivArtikla_prikaz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nazivArtikla"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/kolicinaArtikla_prikaz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/databaseKolicinaArtikla"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dodatenOpisArtikla_prikaz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/databaseOpisArtikla"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/izdelekVKosarici_prikaz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/databaseStatusArtikla"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioButton_kosaricaZArtiklom_prikaz"
            android:layout_width="match_parent"
            android:layout_height="72dp">

            <RadioButton
                android:id="@+id/radioButtonDa"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Da" />

            <RadioButton
                android:id="@+id/radioButtonNe"
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Ne" />
        </RadioGroup>

        <Button
            android:id="@+id/btnNazaj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nazaj" />


    </LinearLayout>
</ScrollView>