<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:orientation="vertical">

        <!--imageview za sliko, upload slike, pa selector za preddefinirane trgovine (morda lokalno)-->

        <TextView
            android:id="@+id/tvStevilkaKartice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stevilkaKartice"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/etStevilkaKartice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/tvImeTrgovine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imeTrgovine"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/etImeTrgovine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/btnDodajKartico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addCard"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</ScrollView>